--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">RSS Reader</string>
-    <string name="enter_rss_channel">Enter RSS Channel</string>
-    <string name="load_news">Load News</string>
+    <string name="enter_rss_channel">Введите ссылку на RSS канал</string>
+    <string name="load_news">Загрузить</string>
     <string name="updating_text">Обновляем ленту</string>
 </resources>
